# ddcrp-gibbs

./: CMakeLists.txt  LICENSE  README.md
data/: covar.csv  data.csv  log_decay.csv
include/: CustomerAssignment.h  DontcareLikelihood.h  LikelihoodFcn.h  MultivariateNormal.h  NIWHyperParam.h  ddCRP.h
src/: CustomerAssignment.cpp  DontcareLikelihood.cpp  LikelihoodFcn.cpp  MultivariateNormal.cpp  ddCRP.cpp  main.cpp
